--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <h3>Esse exercício faz parte do modulo 24 do curso Full Stack Python</h3>
-  <script src="./index.html"></script>
+  <script src="./main.js"></script>
 </body>
 
 </html>\
